--- a/styles/styles.css
+++ b/styles/styles.css
@@ -332,7 +332,7 @@ section {
     width: 100%;
     height: 0.45rem;
     background-color: var(--color-grey-4);
-    margin-left: 1rem;
+    /* margin-left: 1rem; */
     position: relative;
 }
 
