--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -287,7 +287,7 @@ section {
                     width: 100%;
                     height: .45rem;
                     background-color: var(--color-grey-4);
-                    margin-left: 1rem;
+                    // margin-left: 1rem;
                     position: relative;
                     span {
                         position: absolute;
