--- a/styles/styles.css
+++ b/styles/styles.css
@@ -473,6 +473,7 @@ section {
     border-radius: 15px;
 }
 
+
 .portfolios .portfolio-item .hover-items {
     width: 100%;
     height: 100%;
@@ -793,6 +794,7 @@ section {
     padding-left: 0;
 }
 
+
 @media screen and (max-width: 600px) {
     header {
         padding: 0 !important;
@@ -808,7 +810,7 @@ section {
     .left-header .h-shape {
         display: none;
     }
-    .right-header {
+    /* .right-header {
         grid-row: 1;
         padding-right: 0rem !important;
         width: 90%;
@@ -818,7 +820,7 @@ section {
         font-size: 2.5rem !important;
         text-align: center;
         padding-top: 3rem;
-    }
+    } */
     .header-content .left-header .image {
         margin: 0 auto;
         width: 90%;
@@ -994,12 +996,12 @@ section {
         width: 90% !important;
         margin: 0 auto !important;
     }
-    .right-header {
+    /* .right-header {
         grid-row: 1;
         padding-right: 0rem !important;
         width: 90%;
         margin: 0 auto;
-    }
+    } */
     .right-header .name {
         font-size: 2.5rem !important;
         text-align: center;
@@ -1029,7 +1031,68 @@ section {
     .main-title h2 .bg-text {
         font-size: 4rem;
     }
+    .text-container {
+        font-family: 'Arial', sans-serif;
+        font-size: 24px;
+        font-weight: bold;
+        /* white-space: nowrap; */
+        overflow: hidden;
+        display: inline-flex;
+        align-items: center;
+      }
+      
+      .cursor {
+        display: inline-block;
+        font-weight: bold;
+        animation: blink 0.6s step-end infinite;
+      }
+      
+      @keyframes blink {
+        50% {
+          opacity: 0;
+        }
+      }
+
+
+      
+      
 }
 
+.setbtn{
+    border-radius: 60px;
+    transform: none;
+    background-color: rgb(37 99 235 / var(--tw-bg-opacity, 1));
+    padding: 8px 16px;
+    color: white;
+  }
+
+  .setbtngit{
+    border-radius: 60px;
+    transform: none;
+    background-color: rgb(31 41 55/var(--tw-bg-opacity,1));
+    padding: 8px 16px;
+    color: white;
+  }
+
+  .setBox{
+    border-radius: 5%;
+    height: 16em;
+    background-color: var(--color-secondary)
+  }
+  .setboxheader{
+padding: 15px 24px;
+  }
+
+  .setboxtext{
+padding: 0 24px;
+margin-bottom: 20px;
+  }
+.mt-30{
+margin-top: 30px;
+}
+
+.hover-items-box{
+    height: 20%;
+}
 
 /*# sourceMappingURL=styles.css.map */
